[package]
name = "load_balancer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
pingora = { version = "0.3", features = ["lb"] }
pingora-core = "0.3"
pingora-load-balancing = "0.3"
pingora-proxy = "0.3"
http = "0.2.12"
warp = "0.3"
tokio = { version = "1", features = ["full"] }